--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "axios": "^1.8.4",
     "compressorjs": "^1.2.1",
     "localforage": "^1.10.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
